//
//  PlaceholderString.swift
//  Zidosuta
//
//  Created by 川島真之 on 2026/04/16.
//

import Foundation

enum PlaceholderString {

  static let weightTextField = "体重を入力"
  static let memoTextField = "ひとことメモを入力"
}
