...
class PhotoTableViewCell: UITableViewCell {


  // MARK: - Properties

  @IBOutlet weak var photoImageView: UIImageView!
  @IBOutlet weak var insertButton: UIButton! {
    didSet {
      insertButton.accessibilityIdentifier = "insertButton"
    }
  }
  @IBOutlet weak var commentLabel: UILabel!
  @IBOutlet weak var redoButton: UIButton!
...
